--- a/GoalDetails.xaml
+++ b/GoalDetails.xaml
@@ -6,15 +6,25 @@
              Padding="15">
     <ScrollView>
         <VerticalStackLayout>
-            <!--<Label Text="{Binding Id}"
-                   TextColor="AliceBlue"
-                   VerticalOptions="Center" 
-                   HorizontalOptions="Start" />-->
-            <Image 
-                x:Name="TypeImage" 
-                Source="{Binding CurrentImage}" 
-                HeightRequest="150" 
-                WidthRequest="150" />
+
+            <HorizontalStackLayout HorizontalOptions="Center" Spacing="20">
+                <Image 
+                    x:Name="TypeImage" 
+                    Source="{Binding CurrentImage}" 
+                    HeightRequest="150" 
+                    WidthRequest="150" />
+
+                <ImageButton
+                    x:Name="CheckmarkBtn"
+                    Source="checkmark.png"
+                    HeightRequest="60"
+                    WidthRequest="60"
+                    VerticalOptions="Center"
+                    BackgroundColor="Transparent"
+                    Clicked="OnCompleteGoalClicked"
+                    IsVisible="False"/>
+            </HorizontalStackLayout>
+
             <Label
                 x:Name="API"
                 HorizontalOptions="Center" />
@@ -98,10 +108,11 @@
                         BackgroundColor="Grey" 
                         Text="Изтрий"
                         Clicked="OnDeleteClicked"/>
+
                 <Button Grid.Row = "1"
                         Grid.ColumnSpan ="2" 
                         BackgroundColor="#77B948" 
-                        Text="Какво постигнах" 
+                        Text="Какво постигнах"
                         Clicked="OnAchievementsClicked"
                         HorizontalOptions="FillAndExpand"/>
             </Grid>
