--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MobileAppMAUI.MainPage">
-
+             x:Class="MobileAppMAUI.MainPage"
+             BackgroundColor="#F0ECE7">
     <ScrollView>
         <VerticalStackLayout
             Padding="30,0"
@@ -11,7 +11,6 @@
             <Image Source="goalflow.png" WidthRequest="300" />
 
             <Grid RowSpacing="10" ColumnSpacing="0">
-                <!-- Define rows -->
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
@@ -20,38 +19,33 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
-                    <!-- value stretches -->
                 </Grid.ColumnDefinitions>
 
-                <!-- Labels -->
-                <!-- Achieved Points -->
                 <BoxView BackgroundColor="#FFFFFF" Grid.Row="0" Grid.Column="0" CornerRadius="5"/>
                 <Label x:Name="AchievedPointsLabel"
-                Text="Точки" 
-                FontSize="16" 
-                FontAttributes="Bold" 
-                Grid.Row="0" 
-                Grid.Column="0" 
-                HorizontalOptions="Center" 
-                VerticalOptions="Center"
-                Padding="5"/>
+                       Text="0 Точки" 
+                       FontSize="16" 
+                       FontAttributes="Bold" 
+                       Grid.Row="0" 
+                       Grid.Column="0" 
+                       HorizontalOptions="Center" 
+                       VerticalOptions="Center"
+                       Padding="5"/>
 
-                <!-- Spacer Column (optional) -->
                 <BoxView Grid.Row="0" Grid.Column="1" BackgroundColor="Transparent"/>
 
-                <!-- Total Goals -->
                 <BoxView BackgroundColor="#FFFFFF"  Grid.Row="0" Grid.Column="2" CornerRadius="5"/>
                 <Label x:Name="TotalGoalsLabel"
-                Text="Изпълнени цели" 
-                FontSize="16" 
-                Grid.Row="0" 
-                Grid.Column="2" 
-                HorizontalOptions="Center" 
-                VerticalOptions="Center"
-                Padding="5"/>
+                       Text="0 / 0" 
+                       FontSize="16" 
+                       Grid.Row="0" 
+                       Grid.Column="2" 
+                       HorizontalOptions="Center" 
+                       VerticalOptions="Center"
+                       Padding="5"/>
             </Grid>
 
-            <Button Text="Какво постигнах...." BackgroundColor = "#74b74a" TextColor="Black" Clicked="OnClickAchivements"/>
+            <Button Text="Какво постигнах...." BackgroundColor="#74b74a" TextColor="Black" Clicked="OnClickAchivements"/>
             <Button Text="Днес е хубав ден да...." BackgroundColor="#efaa27"  TextColor="Black" Clicked="OnClickTodo"/>
             <Button Text="Моите цели"  BackgroundColor="#3f95c1"  TextColor="Black" Clicked="OnClickMyGoals" />
         </VerticalStackLayout>
