--- a/AchivementFilter.xaml
+++ b/AchivementFilter.xaml
@@ -6,20 +6,20 @@
              BackgroundColor="#F0ECE7"
              Padding="15">
     <ScrollView>
-        <VerticalStackLayout Spacing="20">
+        <VerticalStackLayout Spacing="15">
 
-            <Frame BackgroundColor="White" CornerRadius="15" Padding="20">
+            <Frame BackgroundColor="White" CornerRadius="15" Padding="20" >
                 <VerticalStackLayout>
                     <Label Text="Спечелени Цели" HorizontalOptions="Center" TextColor="Gray"/>
-                    <Label x:Name="TotalAchievedLabel" Text="0" FontSize="40" FontAttributes="Bold" HorizontalOptions="Center" TextColor="#77B948"/>
+                    <Label x:Name="TotalAchievedLabel" Text="0" FontSize="40" FontFamily="Pixel" FontAttributes="Bold" HorizontalOptions="Center" TextColor="#77B948"/>
                 </VerticalStackLayout>
             </Frame>
 
-            <Label Text="Статистика по категория" FontSize="18" FontAttributes="Bold" Margin="0,10,0,0"/>
+            <Label Text="Статистика по категория" FontSize="18" HorizontalOptions="Center" FontAttributes="Bold"/>
 
-            <Grid ColumnDefinitions="*,*" RowDefinitions="Auto,Auto" ColumnSpacing="15" RowSpacing="15">
+            <Grid ColumnDefinitions="*,*" RowDefinitions="Auto,Auto" ColumnSpacing="12" RowSpacing="12">
 
-                <Frame Grid.Row="0" Grid.Column="0" BackgroundColor="White" CornerRadius="15" Padding="15">
+                <Frame Grid.Row="0" Grid.Column="0" BackgroundColor="White" CornerRadius="15" Padding="15" >
                     <Frame.GestureRecognizers>
                         <TapGestureRecognizer Tapped="OnFinanceTapped"/>
                     </Frame.GestureRecognizers>
