--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -10,44 +10,65 @@
 
             <Image Source="goalflow.png" WidthRequest="300" />
 
-            <Grid RowSpacing="10" ColumnSpacing="0">
+            <Grid RowSpacing="10" ColumnSpacing="0" >
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="85" />
                 </Grid.RowDefinitions>
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <BoxView BackgroundColor="#FFFFFF" Grid.Row="0" Grid.Column="0" CornerRadius="5"/>
+                <BoxView BackgroundColor="#FFFFFF" Grid.Row="0" Grid.Column="0" CornerRadius="8" Margin="5" />
                 <Label x:Name="AchievedPointsLabel"
-                       Text="0 Точки" 
-                       FontSize="16" 
-                       FontAttributes="Bold" 
+                       Text="0 Точки"   
+                       FontAutoScalingEnabled="True" 
+                       FontSize="20"
+                       FontFamily="Pixel"
                        Grid.Row="0" 
                        Grid.Column="0" 
                        HorizontalOptions="Center" 
                        VerticalOptions="Center"
-                       Padding="5"/>
+                       HorizontalTextAlignment="Center"
+                       Padding="5" />
 
-                <BoxView Grid.Row="0" Grid.Column="1" BackgroundColor="Transparent"/>
 
-                <BoxView BackgroundColor="#FFFFFF"  Grid.Row="0" Grid.Column="2" CornerRadius="5"/>
+                <BoxView BackgroundColor="#FFFFFF"  Grid.Row="0" Grid.Column="1" CornerRadius="5" Margin="5"/>
                 <Label x:Name="TotalGoalsLabel"
                        Text="0 / 0" 
-                       FontSize="16" 
+                       FontAutoScalingEnabled="True" 
+                       FontSize="14"
+                       FontFamily="Pixel"
                        Grid.Row="0" 
                        Grid.Column="2" 
                        HorizontalOptions="Center" 
                        VerticalOptions="Center"
-                       Padding="5"/>
+                       HorizontalTextAlignment="Center"
+                       Padding="5" />
             </Grid>
 
-            <Button Text="Какво постигнах...." BackgroundColor="#74b74a" TextColor="Black" Clicked="OnClickAchivements"/>
-            <Button Text="Днес е хубав ден да...." BackgroundColor="#efaa27"  TextColor="Black" Clicked="OnClickTodo"/>
-            <Button Text="Моите цели"  BackgroundColor="#3f95c1"  TextColor="Black" Clicked="OnClickMyGoals" />
+            <Button Text="Какво постигнах...." 
+                    BackgroundColor="#74b74a" 
+                    TextColor="White"
+                    Clicked="OnClickAchivements" 
+                    FontFamily="Pixel"
+                    FontSize="14"/>
+            
+            <Button Text="Днес е хубав ден да...." 
+                    BackgroundColor="Orange"  
+                    TextColor="White" 
+                    Clicked="OnClickTodo" 
+                    FontFamily="Pixel"
+                    FontSize="12"/>
+            
+            <Button Text="Моите цели"  
+                    BackgroundColor="#3f95c1"  
+                    TextColor="White" 
+                    Clicked="OnClickMyGoals" 
+                    FontFamily="Pixel"
+                    FontSize="16"/>
+            
         </VerticalStackLayout>
     </ScrollView>
 
