--- a/MyGoals.xaml
+++ b/MyGoals.xaml
@@ -19,7 +19,7 @@
         </Grid.RowDefinitions>
 
         <!--   HEADER   -->
-        <BoxView
+            <BoxView
             Grid.Row="0" 
             Grid.Column="0"
             Grid.ColumnSpan="3" 
@@ -43,59 +43,59 @@
             BackgroundColor="Transparent"
             Clicked="OnAddButtonClicked"
             Pressed="OnButtonPressed"
-            Released="OnButtonReleased"
-            />
+            Released="OnButtonReleased"/>
+ 
 
         <!--   FILTER BUTTONS   -->
         <VerticalStackLayout Grid.Row="1" Grid.Column="0" Spacing="2" VerticalOptions="Center">
-            <ImageButton
-                x:Name="FinGoalButton"
-                Source="fingoal.png"
-                Aspect="AspectFit"
-                BackgroundColor="Transparent"
-                Clicked="OnFilterButtonClicked"
-                CommandParameter="Finance"
-                HeightRequest="65" WidthRequest="65"/>
-            <BoxView CornerRadius="2" HeightRequest="3" Color="Green" IsVisible="False" WidthRequest="40" HorizontalOptions="Center" />
+                <ImageButton
+                    x:Name="FinGoalButton"
+                    Source="fingoal.png"
+                    Aspect="AspectFit"
+                    BackgroundColor="Transparent"
+                    Clicked="OnFilterButtonClicked"
+                    CommandParameter="Finance"
+                    HeightRequest="65" WidthRequest="65"/>
+                <BoxView CornerRadius="2" HeightRequest="3" Color="Green" IsVisible="False" WidthRequest="40" HorizontalOptions="Center" />
         </VerticalStackLayout>
 
         <VerticalStackLayout Grid.Row="1" Grid.Column="1" Spacing="2" VerticalOptions="Center">
-            <ImageButton
-                x:Name="EduGoalButton"
-                Source="edugoal.png"
-                Aspect="AspectFit"
-                BackgroundColor="Transparent"
-                Clicked="OnFilterButtonClicked"
-                CommandParameter="Learning" 
-                HeightRequest="65" WidthRequest="65"/>
+                <ImageButton
+                    x:Name="EduGoalButton"
+                    Source="edugoal.png"
+                    Aspect="AspectFit"
+                    BackgroundColor="Transparent"
+                    Clicked="OnFilterButtonClicked"
+                    CommandParameter="Learning" 
+                    HeightRequest="65" WidthRequest="65"/>
 
-            <BoxView CornerRadius="2" HeightRequest="3" Color="#3E94C1" IsVisible="False" WidthRequest="40" HorizontalOptions="Center"/>
+                <BoxView CornerRadius="2" HeightRequest="3" Color="#3E94C1" IsVisible="False" WidthRequest="40" HorizontalOptions="Center"/>
         </VerticalStackLayout>
 
         <VerticalStackLayout Grid.Row="1" Grid.Column="2" Spacing="2" VerticalOptions="Center">
-            <ImageButton
-                x:Name="HealthGoalButton"
-                Source="healthgoal.png"
-                Aspect="AspectFit"
-                BackgroundColor="Transparent" 
-                Clicked="OnFilterButtonClicked"
-                CommandParameter="Sport"
-                HeightRequest="65" WidthRequest="65"/>
+                <ImageButton
+                    x:Name="HealthGoalButton"
+                    Source="healthgoal.png"
+                    Aspect="AspectFit"
+                    BackgroundColor="Transparent" 
+                    Clicked="OnFilterButtonClicked"
+                    CommandParameter="Sport"
+                    HeightRequest="65" WidthRequest="65"/>
 
-            <BoxView CornerRadius="2" HeightRequest="3" Color="#f56955" IsVisible="False" WidthRequest="40" HorizontalOptions="Center"/>
+                <BoxView CornerRadius="2" HeightRequest="3" Color="#f56955" IsVisible="False" WidthRequest="40" HorizontalOptions="Center"/>
         </VerticalStackLayout>
 
         <VerticalStackLayout Grid.Row="1" Grid.Column="3" Spacing="2" VerticalOptions="Center">
-            <ImageButton 
-                x:Name="PersonalGoalButton"
-                Source="personalgoal.png"
-                Aspect="AspectFit"
-                BackgroundColor="Transparent"
-                Clicked="OnFilterButtonClicked"
-                CommandParameter="Personal" 
-                HeightRequest="65" WidthRequest="65"/>
+                <ImageButton 
+                    x:Name="PersonalGoalButton"
+                    Source="personalgoal.png"
+                    Aspect="AspectFit"
+                    BackgroundColor="Transparent"
+                    Clicked="OnFilterButtonClicked"
+                    CommandParameter="Personal" 
+                    HeightRequest="65" WidthRequest="65"/>
 
-            <BoxView CornerRadius="2" HeightRequest="3" Color="#fcdbb9" IsVisible="False" WidthRequest="40" HorizontalOptions="Center"/>
+                <BoxView CornerRadius="2" HeightRequest="3" Color="#fcdbb9" IsVisible="False" WidthRequest="40" HorizontalOptions="Center"/>
         </VerticalStackLayout>
 
         <!--    GOALS LIST   -->
@@ -115,10 +115,10 @@
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Border 
-                        Stroke="Black"
+                        
                         StrokeThickness="1"
                         BackgroundColor="White"
-                        StrokeShape="RoundRectangle 8">
+                        StrokeShape="RoundRectangle 12">
                         <VerticalStackLayout Padding="10">
                             <Label 
                                 Text="{Binding Description}"
