--- a/AchivementFilter.xaml
+++ b/AchivementFilter.xaml
@@ -2,40 +2,39 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileAppMAUI.AchivementFilter"
-             Title="Общ Преглед"
              BackgroundColor="#F0ECE7"
              Padding="15">
     <ScrollView>
-        <VerticalStackLayout Spacing="15">
+        <VerticalStackLayout Spacing="15" Margin="0,15,0,0">
 
-            <Frame BackgroundColor="White" CornerRadius="15" Padding="20" >
+            <Border BackgroundColor="White"  StrokeShape="RoundRectangle 6" Padding="20" >
                 <VerticalStackLayout>
                     <Label Text="Спечелени Цели" HorizontalOptions="Center" TextColor="Gray"/>
                     <Label x:Name="TotalAchievedLabel" Text="0" FontSize="40" FontFamily="Pixel" FontAttributes="Bold" HorizontalOptions="Center" TextColor="#77B948"/>
                 </VerticalStackLayout>
-            </Frame>
+            </Border>
 
             <Label Text="Статистика по категория" FontSize="18" HorizontalOptions="Center" FontAttributes="Bold"/>
 
             <Grid ColumnDefinitions="*,*" RowDefinitions="Auto,Auto" ColumnSpacing="12" RowSpacing="12">
 
-                <Frame Grid.Row="0" Grid.Column="0" BackgroundColor="White" CornerRadius="15" Padding="15" >
-                    <Frame.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="OnFinanceTapped"/>
-                    </Frame.GestureRecognizers>
+                <Border Grid.Row="0" Grid.Column="0" BackgroundColor="White"  StrokeShape="RoundRectangle 8" Padding="15" >
+                    <Border.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OnFinanceTapped" />
+                    </Border.GestureRecognizers>
                     <VerticalStackLayout Spacing="5">
                         <Image Source="fingoal.png" HeightRequest="50" WidthRequest="50"/>
                         <Label Text="Финанси" HorizontalOptions="Center" FontAttributes="Bold"/>
                         <BoxView HeightRequest="1" Color="LightGray"/>
-                        <Label x:Name="finPoints" Text="0 т." TextColor="#77B948" HorizontalOptions="Center" FontAttributes="Bold"/>
+                        <Label x:Name="finPoints" Text="0 т." TextColor="#77B948" HorizontalOptions="Center" FontAttributes="Bold" />
                         <Label x:Name="finCount" Text="0 цели" TextColor="Gray" FontSize="12" HorizontalOptions="Center"/>
                     </VerticalStackLayout>
-                </Frame>
+                </Border>
 
-                <Frame Grid.Row="0" Grid.Column="1" BackgroundColor="White" CornerRadius="15" Padding="15">
-                    <Frame.GestureRecognizers>
+                <Border Grid.Row="0" Grid.Column="1" BackgroundColor="White"  StrokeShape="RoundRectangle 8" Padding="15">
+                    <Border.GestureRecognizers>
                         <TapGestureRecognizer Tapped="OnEducationTapped"/>
-                    </Frame.GestureRecognizers>
+                    </Border.GestureRecognizers>
                     <VerticalStackLayout Spacing="5">
                         <Image Source="edugoal.png" HeightRequest="50" WidthRequest="50"/>
                         <Label Text="Учене" HorizontalOptions="Center" FontAttributes="Bold"/>
@@ -43,12 +42,12 @@
                         <Label x:Name="eduPoints" Text="0 т." TextColor="#77B948" HorizontalOptions="Center" FontAttributes="Bold"/>
                         <Label x:Name="eduCount" Text="0 цели" TextColor="Gray" FontSize="12" HorizontalOptions="Center"/>
                     </VerticalStackLayout>
-                </Frame>
+                </Border>
 
-                <Frame Grid.Row="1" Grid.Column="0" BackgroundColor="White" CornerRadius="15" Padding="15">
-                    <Frame.GestureRecognizers>
+                <Border Grid.Row="1" Grid.Column="0" BackgroundColor="White" StrokeShape="RoundRectangle 8" Padding="15">
+                    <Border.GestureRecognizers>
                         <TapGestureRecognizer Tapped="OnSportTapped"/>
-                    </Frame.GestureRecognizers>
+                    </Border.GestureRecognizers>
                     <VerticalStackLayout Spacing="5">
                         <Image Source="healthgoal.png" HeightRequest="50" WidthRequest="50"/>
                         <Label Text="Спорт" HorizontalOptions="Center" FontAttributes="Bold"/>
@@ -56,12 +55,12 @@
                         <Label x:Name="helathPoints" Text="0 т." TextColor="#77B948" HorizontalOptions="Center" FontAttributes="Bold"/>
                         <Label x:Name="healthCount" Text="0 цели" TextColor="Gray" FontSize="12" HorizontalOptions="Center"/>
                     </VerticalStackLayout>
-                </Frame>
+                </Border>
 
-                <Frame Grid.Row="1" Grid.Column="1" BackgroundColor="White" CornerRadius="15" Padding="15">
-                    <Frame.GestureRecognizers>
+                <Border Grid.Row="1" Grid.Column="1" BackgroundColor="White" StrokeShape="RoundRectangle 8" Padding="15">
+                    <Border.GestureRecognizers>
                         <TapGestureRecognizer Tapped="OnPersonalTapped"/>
-                    </Frame.GestureRecognizers>
+                    </Border.GestureRecognizers>
                     <VerticalStackLayout Spacing="5">
                         <Image Source="personalgoal.png" HeightRequest="50" WidthRequest="50"/>
                         <Label Text="Лични" HorizontalOptions="Center" FontAttributes="Bold"/>
@@ -69,7 +68,7 @@
                         <Label x:Name="personalPoints" Text="0 т." TextColor="#77B948" HorizontalOptions="Center" FontAttributes="Bold"/>
                         <Label x:Name="personalCount" Text="0 цели" TextColor="Gray" FontSize="12" HorizontalOptions="Center"/>
                     </VerticalStackLayout>
-                </Frame>
+                </Border>
             </Grid>
 
         </VerticalStackLayout>
